# home-assistant-addon-s0pcm-reader

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  Dockerfile  Dockerfile.standalone  LICENSE  README.md  SECURITY.md  apparmor.txt  build.yaml  config.yaml  coverage.txt  coverage2.txt  coverage3.txt  coverage_full.txt  coverage_report.txt  disableapparmor.txt  fallback_output.txt  final_debug.txt  final_report.txt  full_coverage.txt  pyproject.toml  release.sh  renovate.json  repository.yaml  run_status.json  run_status2.json  run_status_beta.json  run_status_latest.json  trace.txt
.github/: dependabot.yml
.github/workflows/: builder.yml  cleanup.yml  codeql.yml  deploy_beta.yml  publish.yml  release.yml  scorecard.yml  test.yml  update_copyright.yml  zizmor.yml
rootfs/etc/cont-init.d/: config.sh
rootfs/etc/services.d/s0pcm-reader/: finish  run
rootfs/usr/share/tempio/: s0pcm_config.conf
rootfs/usr/src/: config.py  configuration.json.example  configuration.yaml.example  constants.py  discovery.py  healthcheck.py  mqtt_handler.py  protocol.py  recovery.py  requirements.txt  run.sh  s0pcm-reader.py  s0pcm_reader.py  serial_handler.py  state.py  utils.py
tests/: DOCKER_TESTING.md  Dockerfile.test  QUICKSTART.md  README.md  STATUS.md  TESTING_GUIDE.md  __init__.py  conftest.py  docker-test.ps1  docker-test.sh  docker_out.txt  fix-lint.ps1  helpers.py  pytest.ini  requirements-test.txt  test_config.py  test_constants.py  test_discovery.py  test_discovery_config.py  test_healthcheck.py  test_helpers.py  test_loops.py  test_main.py  test_main_coverage.py  test_main_signal_handling.py  test_main_signal_handling.py.fixed  test_measurement_logic.py  test_mqtt_client.py  test_mqtt_edge_cases.py  test_mqtt_handler.py  test_mqtt_handler_missing.py  test_packet_parsing.py  test_protocol.py  test_recovery.py  test_robustness.py  test_s0pcm_reader.py  test_serial_handler.py  test_serial_reader.py  test_state.py  test_utils.py
tests/standalone/: Dockerfile.test_app  docker-compose.yml
tests/standalone/config/: options.json
tests/standalone/mqtt/: Dockerfile  mosquitto.conf
tests/standalone/simulator/: Dockerfile  simulator.py
tests/standalone/verifier/: Dockerfile  verifier.py
translations/: en.yaml
