[project]
name = "s0pcm-reader"
version = "4.0.1-b3"
description = "S0PCM Reader Home Assistant App"
requires-python = ">=3.14"
dependencies = [
    "pyyaml==6.0.3",
    "pyserial==3.5",
    "paho-mqtt==2.1.0",
    "pydantic==2.12.5",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.4",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.ruff]
# Same as Home Assistant
line-length = 120
target-version = "py314"
src = ["rootfs/usr/src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "RUF",# ruff-specific rules
    "S",  # flake8-bandit (security)
    "SIM",# flake8-simplify
    "PTH",# flake8-use-pathlib
]
ignore = [
    "E501", # Line too long (handled by formatter, but sometimes unavoidable)
    "B008", # Do not perform function call in argument defaults (fastapi dependency injection pattern, fine here too)
    "S310", # Audit URL open for permitted schemes (only hardcoded Supervisor API URLs used)
    "S603", # subprocess call - check for execution of untrusted input (not applicable)
    "S607", # Starting a process with a partial executable path (not applicable)
    "S104", # Possible binding to all interfaces (not applicable)
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108", "PTH"]  # assert, temp paths, and os.path are standard in pytest

[tool.pytest.ini_options]
addopts = "-v --tb=short --strict-markers --disable-warnings -p no:cacheprovider"
pythonpath = [
    "rootfs/usr/src",
    "tests",
    "."
]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "serial: Tests requiring serial port mocking",
    "mqtt: Tests requiring MQTT mocking",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["rootfs/usr/src"]
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
